--- a/action.yml
+++ b/action.yml
@@ -7,6 +7,9 @@ inputs:
   issue_body_json:
     description: 'The JSON from the parsed issue body'
     required: true  
+  requestor:
+    description: 'Actor who created the issue'
+    required: true  
 outputs:
   status: # output will be available to future steps
     description: 'The Status of a particular request'
